# forge

./: README.md  main.py  pyproject.toml
forge/: cli.py
forge/agents/: narrator.py
forge/core/: agent.py  context.py
